--- a/frontend/src/components/sidebar/Sidebar.css
+++ b/frontend/src/components/sidebar/Sidebar.css
@@ -1,56 +1,90 @@
-/* src/components/sidebar/Sidebar.css */
 .sidebar {
-    width: 250px;
-    height: 100vh;
-    background-color: #2c3e50;
-    color: #fff;
+    width: 200px;
+    height: calc(100vh - 90px);
+    background-color: #ffffff;
+    color: #000000;
     padding: 20px;
     position: fixed;
-    top: 0;
+    top: 85px;
     left: 0;
     display: flex;
     flex-direction: column;
     align-items: start;
-}
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    color: #000000;
+    cursor: pointer;
 
-.sidebar h2 {
-    margin-bottom: 20px;
 }
 
 .sidebar ul {
     list-style: none;
-    padding: 0;
+    padding: 0%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    height: auto;
 }
 
 .sidebar li {
-    margin-bottom: 60px; 
-    border: 1px solid #1abc9c; 
+    color: #000000;
+    margin: 10px 0; 
     border-radius: 5px;
-    padding: 20px 40px; 
+    padding: 10px 30px; 
     transition: background-color 0.3s, transform 0.3s; 
-    width: 100%; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 150px; 
     display: flex;
-    justify-content: center;
-    align-items: center; 
-}
+    margin-left: auto;
+    margin-right: auto;
 
+}
+.sidebar li svg {
+    margin-right: 15px; /* Khoảng cách giữa icon và text */
+    color: #000000; /* Màu sắc cho icon */
+}
 .sidebar a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
     display: block; 
 }
 
 .sidebar li:hover {
-    background-color: rgba(26, 188, 156, 0.2);
+    background-color: rgba(155, 157, 157, 0.2);
     transform: translateY(-2px); 
 }
 
 .sidebar a:hover {
-    color: #1abc9c;
+    color: #919191;
+}
+
+.sub-menu {
+    display: none; /* Ẩn submenu theo mặc định */
+    flex-direction: column;
+    width: 100%; /* Đảm bảo submenu chiếm hết chiều rộng của sidebar */
+    padding-left: 20px; /* Tạo khoảng cách thụt vào cho submenu */
+    margin-top: 5px;
+}
+
+.sub-menu.show {
+    display: block;
+    top: 100%; /* Hiển thị các mục con khi bật */
+}
+
+.sub-menu li {
+    padding: 8px 0; /* Khoảng cách giữa các mục con */
+}
+
+.sub-menu li a {
+    color: #333;
+    text-decoration: none;
+    padding: 5px 0;
+    display: block;
+}
+
+.sub-menu li a:hover {
+    color: #000;
+}
+.sidebar-item {
+    position: relative;
+    width: 100%;
 }
