--- a/frontend/src/components/sidebar/Sidebar.css
+++ b/frontend/src/components/sidebar/Sidebar.css
@@ -27,7 +27,7 @@
 
 .sidebar li {
     color: #000000;
-    margin: 10px 0; 
+    margin: 5px 10px; 
     border-radius: 5px;
     padding: 10px 30px; 
     transition: background-color 0.3s, transform 0.3s; 
@@ -56,6 +56,9 @@
 .sidebar a:hover {
     color: #919191;
 }
+.sidebar-item:hover{
+    color: #919191;
+}
 
 .sub-menu {
     display: none; /* Ẩn submenu theo mặc định */
@@ -63,22 +66,34 @@
     width: 100%; /* Đảm bảo submenu chiếm hết chiều rộng của sidebar */
     padding-left: 20px; /* Tạo khoảng cách thụt vào cho submenu */
     margin-top: 5px;
+    border: #000;
+    
+
 }
 
 .sub-menu.show {
     display: block;
     top: 100%; /* Hiển thị các mục con khi bật */
+    
 }
 
 .sub-menu li {
     padding: 8px 0; /* Khoảng cách giữa các mục con */
 }
+.sub-menu li::before {
+    content: "•"; /* Thêm dấu chấm tròn */
+    color: #666;
+    margin-right: 5px;
+    font-size: 20px;
+}
 
 .sub-menu li a {
     color: #333;
     text-decoration: none;
-    padding: 5px 0;
     display: block;
+    font-size: 14px;
+    margin-top: 5px;
+
 }
 
 .sub-menu li a:hover {
