--- a/frontend/src/components/products/allproducts/ProductTable.css
+++ b/frontend/src/components/products/allproducts/ProductTable.css
@@ -106,3 +106,56 @@ input[type="checkbox"] {
 .button-delete.enabled {
     background-color: #ff4d4d; /* Màu đỏ đậm khi có sản phẩm được chọn */
 }
+
+/* CSS form product */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensure modal appears on top */
+}
+
+.edit-product-modal {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 50%;
+    max-width: 600px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.edit-product-modal .form-group {
+    margin-bottom: 15px;
+}
+
+.edit-product-modal input {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.edit-product-modal button {
+    padding: 10px 15px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px;
+    border-radius: 4px;
+}
+
+.edit-product-modal button[type="button"] {
+    background-color: #f44336;
+}
+
+.edit-product-modal button:hover {
+    opacity: 0.8;
+}
