--- a/frontend/src/components/products/insertproduct/InsertProduct.css
+++ b/frontend/src/components/products/insertproduct/InsertProduct.css
@@ -129,3 +129,32 @@
 .submit-button:hover {
     background-color: #45a049;
 }
+.image-preview-container {
+    position: relative;
+    display: inline-block;
+}
+
+.image-preview {
+    max-width: 200px;
+    max-height: 200px;
+    margin-top: 10px;
+    border: 1px solid #ddd;
+    padding: 5px;
+    object-fit: contain;
+}
+
+.remove-image-button {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    background-color: rgb(255, 0, 0);
+    color: white;
+    border: none;
+    padding: 0%;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.remove-image-button:hover {
+    background-color: darkred;
+}
